app/assets/scss/partials/_sidebar.scss
$sidebar-width: 116px;
$nav-color: #333;

.off-canvas-wrap {
  height: 100%;
  overflow: auto;
}

.inner-wrap {
  width: auto;
  height: 100%;
}

.move-right .inner-wrap {
  -ms-transform: none;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  -o-transform: none;
  transform: none;
  margin-left: $sidebar-width;
}

.left-off-canvas-menu {
  -ms-transform: none;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  -o-transform: none;
  transform: none;
  position: fixed;
  width: 0;
  height: 100%;

  .icon-bar {
    .item {
      width: $sidebar-width;
      overflow: hidden;
    }
  }
}

.move-right .left-off-canvas-menu {
  width: $sidebar-width;
}

.move-right .exit-off-canvas {
  display: none;
}

.left-off-canvas-toggle {
  display: none;
  margin-top: 1rem;
  margin-left: 1rem;
  font-size: 3rem;
  color: $nav-color;
  transition: all .25s ease-in-out;

  &:focus {
    color: $nav-color;
  }

  &:hover {
    color: lighten($nav-color, 35%);
    transition: all .25s ease-in-out;
  }
}

